04-k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intent-classifier
  namespace: intent-namespace
  labels:
    app: intent-classifier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: intent-classifier
  template:
    metadata:
      labels:
        app: intent-classifier
    spec:
      containers:
        - name: intent-classifier
          image: 737971166371.dkr.ecr.us-east-1.amazonaws.com/mlops:latest
          ports:
            - containerPort: 6000
